my fourth commit message

--- a/NoteScan/package.json
+++ b/NoteScan/package.json
@@ -22,6 +22,7 @@
     "expo-file-system": "latest",
     "expo-gl": "^13.0.1",
     "expo-image-manipulator": "latest",
+    "expo-image-picker": "^17.0.10",
     "react": "latest",
     "react-native": "latest",
     "react-native-fs": "^2.20.0",
