my fithe commit

--- a/NoteScan/package.json
+++ b/NoteScan/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "latest",
+    "@react-native-community/slider": "^5.1.2",
     "@tensorflow/tfjs": "latest",
     "@tensorflow/tfjs-backend-cpu": "^4.13.0",
     "@tensorflow/tfjs-backend-webgl": "^4.13.0",
     "@tensorflow/tfjs-core": "^4.13.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "expo": "latest",
+    "expo-av": "^16.0.8",
     "expo-camera": "latest",
     "expo-file-system": "latest",
     "expo-gl": "^13.0.1",
